[package]
name = "sr25519_ecdh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sr25519_ecdh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
schnorrkel = "0.11.4"
